1st attempt change CORS policy

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 	<form>
+		NBID: <input type="text" name="nbid" id="nbid"><br>
 		Offer Amount: <input type="text" name="offerAmount" id="offerAmount"><br>
 		Years: <input type="text" name="years" id="years">
 		APR: <input type="text" name="apr" id="apr">
