changed CORS policy

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		Monthly Payment: <input type="text" name="monthlyPayment" id="monthlyPayment">
 		Term Title: <input type="text" name="termTitle" id="termTitle">
 	</form>
-	<button id="submit">Submit</button>
+	<button id="fund">Fund</button>
 
 
 	    <!-- jQuery -->
